fixed distortion in svg icons

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,7 @@ p,
 img {
   margin: 0;
   padding: 0;
+  object-fit: contain;
 }
 
 /* set up default body styles */
@@ -133,8 +134,6 @@ body {
 }
 
 .auction-info img {
-  margin-top: 4px;
-  margin-bottom: 0;
   margin-right: 0.5rem;
 }
 
@@ -155,8 +154,8 @@ body {
 }
 
 .creator-info img {
-    border-radius: 100%;
-    margin-right: 0.5rem;
+  border-radius: 100%;
+  margin-right: 0.5rem;
 }
 
 .creator-name {
